# aeronyx_crypto

./: Cargo.toml  README.md  build.rs
RustCrypto/: build.sh
RustCrypto/src/: lib.rs
examples/: mobile_client.rs
src/: benchmarks.rs  crypto.rs  crypto_extensions.rs  crypto_provider.rs  errors.rs  ffi.rs  key_derivation.rs  lib.rs  protocol_support.rs  secure_memory.rs
src/auth/: acl.rs  challenge.rs  manager.rs
src/platform/: android.rs  ios.rs  mod.rs  windows.rs
src/power/: mod.rs
src/protocol/: state.rs
src/simd/: mod.rs  x86.rs
src/standards/: fips.rs  mod.rs  nist.rs  solana.rs
src/transport/: mod.rs
tests/: integration_tests.rs  mobile_integration_tests.rs
