[package]
name = "aeronyx-crypto"
version = "0.2.0"
edition = "2021"
authors = ["AeroNyx Team"]
description = "Cryptographic library for AeroNyx DePIN network"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aeronyx/aeronyx-crypto"

[lib]
name = "aeronyx_crypto"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Core crypto
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
ed25519-dalek = "2.1.0"
x25519-dalek = "2.0.0"
curve25519-dalek = "4.1.1"
hkdf = "0.12.3"
sha2 = "0.10.8"
hmac = "0.12.1"
argon2 = "0.5.2"

# Solana
solana-sdk = "1.17.0"

# Error handling
thiserror = "1.0.50"

# Security
zeroize = { version = "1.7.0", features = ["derive"] }
subtle = "2.5.0"

# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Performance
lazy_static = "1.4.0"
parking_lot = "0.12.1"

# Base encoding
bs58 = "0.5.0"

# Compression for transport
flate2 = "1.0"
crc32fast = "1.3"

# Platform specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincred", "dpapi", "memoryapi", "sysinfoapi", "errhandlingapi", "winbase"] }

# Logging (optional)
[dependencies.log]
version = "0.4"
optional = true

[dependencies.env_logger]
version = "0.10"
optional = true

# Build dependencies
[build-dependencies]
winres = { version = "0.1", optional = true }
chrono = "0.4"
pkg-config = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
wasm = ["getrandom/js"]
ffi = []
benchmarks = []
logging = ["dep:log", "dep:env_logger"]
std = []
windows-build = ["dep:winres"]
linux-build = ["dep:pkg-config"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bench]]
name = "crypto_benchmarks"
harness = false
